--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body, #root {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 0.9rem;
+  background: #0a1f44;
+  color: #1e2432;
+  height: 100%;
+}
+
+.app__container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/* .app__container input {
+  font-family: 'Varela Round', sans-serif;
+  font-size: 1.5rem;
+} */
+
+.app__search {
+  outline: none;
+  font-size: 1.5rem;
+  padding: 20px 7%;
+  border-radius: 20px;
+  border: none;
+  margin-bottom: 5%;
+  background: rgba(250, 250, 250, 0.85);
+}
+
+.app__city {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 40px 8%;
+  border-radius: 20px;
+  background: rgba(250, 250, 250, 0.85);
+  box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+}
+
+p {
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+}
+
+.app__cityTemp {
+  font-size: 5rem;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #1e2432;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app__city sup {
+  font-size: 0.5em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__cityName {
+  font-size: 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app__cityName sup {
+  padding: 0.2em 0.6em;
+  margin-left: 0.2em;
+  border-radius: 30px;
+  color: #ffffff;
+  background: #ff8c00;
+}
+
+.app__cityIcon {
+  margin-top: 10px;
+  width: 100px;
+  height: 100px;
+}
+
+.app__cityInfo {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 600px) {
+  .app__search {
+    padding: 20px 15%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .app__city {
+    padding: 40px 20%;
   }
 }
